# d2r-core

./: .env  .env.example  .gitignore  AGENTS.md  CLAUDE.md  CONSTITUTION.md  Cargo.toml  GEMINI.md  LICENSE  NAVIGATOR.md  NOTICE  README.md  build.rs  dprint.json  gemini.md  tmp_report.md
.github/: copilot-instructions.md
d2r-data-extractor/src/: main.rs
examples/: check_after_jav.rs  check_id.rs  check_stat_80.rs  count_jm.rs  d2save_bit_xor_diff.rs  detail_items.rs  diff.rs  dump_gap.rs  dump_gf.rs  dump_prefix.rs  forensic_demo.rs  gf_bit_print.rs  gf_xray.rs  inspect_items.rs  luck_fuzzer.rs  mercenary_audit.rs  probe_jav_header.rs  probe_jav_props_final.rs  probe_jav_raw.rs  probe_terminator.rs  probe_v0.rs  scan_all_headers.rs  scan_flags.rs  scan_jm.rs  stat_probe.rs  v105_quest_semantic_check.rs  v105_unlocker.rs
scratch/: check_checksum.rs  dump_flags.rs  opaque_width_discovery.rs
scripts/: analyze_symmetry_mismatches.ps1  d2s_poisoner.ps1  drill_down.ps1  verify_symmetry_batch.ps1
src/: error.rs  inventory.rs  item.rs  lib.rs  main.rs  report.rs  save.rs  spec.rs
src/algo/: alignment.rs  axioms.rs  mod.rs
src/data/: bit_cursor.rs  item_codes.rs  mod.rs  repository.rs  stat_costs.rs
src/domain/: gateway.rs  mod.rs
src/domain/character/: skills.rs
src/domain/forensic/: mod.rs  registry.rs
src/domain/forensic/v105/: axioms.rs  mercenary.rs  mod.rs
src/domain/header/: axiom.rs  entity.rs  mod.rs  parser.rs
src/domain/item/: axiom_meta.rs  editor.rs  entity.rs  huffman.rs  mod.rs  quality.rs  scanner.rs  serialization.rs  stat_list.rs
src/domain/progression/: axiom.rs  mod.rs  quest.rs  waypoint.rs
src/domain/stats/: attribute.rs  axiom.rs  entity.rs  mod.rs  parser.rs
src/domain/vo/: mod.rs
src/engine/: checksum.rs  config.rs  formatter.rs  item_parallel.rs  mod.rs  validation.rs
src/verify/: args.rs  bit_diff.rs  delta.rs  desync.rs  mod.rs  mutation.rs  save_integrity.rs  sba.rs  symmetry.rs
src/verify/v2/: header.rs  item.rs  mod.rs  progression.rs
tests/: alpha_v105_integration_test.rs  cli_standardization_tests.rs  common.rs  editor_integration_tests.rs  fixture_validation.rs  golden_master_tests.rs  integrity_auditor.rs  item_validation_test.rs  kani_harness.rs  legitimacy_test.rs  option_rendering_test.rs  progression_test.rs  rebuild_item_section.rs  roundtrip_harness.rs  save_header_tests.rs  save_mutation_proptest.rs  slice2_mutation_test.rs  slice3_socket_mutation_test.rs  stash_slot_classification_tests.rs  status_and_stash_roundtrip_tests.rs  status_attributes_tests.rs  status_skills_tests.rs
tests/fixtures/: sba_baseline_amazon_10_scrolls.json
tests/fixtures/items/: portal_scroll.d2i  portal_scroll_perfect.d2i
tests/fixtures/savegames/: README.md
tests/fixtures/savegames/gameplay/: README.md
tests/fixtures/savegames/gameplay/normal/act1/: TESTASSASSIN_Act1_BloodRavenKilled_PreKashya.d2s  TESTASSASSIN_Act1_FreshStart.d2s  TESTASSASSIN_Act1_KashyaTalked_AlizaHired.d2s  TESTASSASSIN_Act1_Rogue_BowArmor.d2s  TESTASSASSIN_Act1_Rogue_BowOnly.d2s  TESTASSASSIN_Act1_Rogue_CapBowArmor.d2s  TESTASSASSIN_Act1_Rogue_Lv7_Exp58640.d2s  TESTASSASSIN_Act1_Rogue_Lv8_Exp63890.d2s  TESTASSASSIN_Act1_Rogue_Stats_Verify.d2s  TESTASSASSIN_Act1_Rogue_SwappedToVisala.d2s  TESTDRUID_PostWarriv_Act1.d2s  TESTDRUID_PostWarriv_Act2Entered.d2s  TESTDRUID_Quest1_AkaraRingObtained.d2s  TESTDRUID_Quest1_DenOfEvil_Done_PreAkara.d2s  TESTDRUID_Quest2_BloodRaven_Done_PreKashya.d2s  TESTDRUID_Quest3_CainRescued.d2s  TESTDRUID_Quest3_CainTalked.d2s  TESTDRUID_Quest3_ScrollObtained_PostAkara.d2s  TESTDRUID_Quest3_ScrollObtained_PreAkara.d2s  TESTDRUID_Quest3_TristramPortalOpened.d2s  TESTDRUID_Quest4_CountessKilled.d2s  TESTDRUID_Quest5_Hammer_PostCharsi.d2s  TESTDRUID_Quest5_Hammer_PreCharsi.d2s  TESTDRUID_Quest5_Imbued.d2s  TESTDRUID_Quest6_AndarielKilled.d2s  TESTDRUID_Quest6_CainTalked_CatacombsUnlocked.d2s
tests/fixtures/savegames/gameplay/normal/act2/: TESTDRUID_Act2_MercHired.d2s  TESTDRUID_Q1_RadamentKilled.d2s  TESTDRUID_Q1_SkillBookUsed.d2s  TESTDRUID_Q2_CubeFoundNoCainTalk.d2s  TESTDRUID_Q2_ScrollDelivered.d2s  TESTDRUID_Q2_StaffCombinedDrognanTalk.d2s  TESTDRUID_Q2_StaffFoundCainTalk.d2s  TESTDRUID_Q2_StaffOfKingsFound.d2s  TESTDRUID_Q3_AmuletFoundNoTalk.d2s  TESTDRUID_Q5_SummonerKilledNoTalk.d2s
tests/fixtures/savegames/gameplay/normal/act3/: TESTASSASSIN_Act3_ColdMercLvl21.d2s  TESTASSASSIN_Act3_FireMercLvl23.d2s  TESTASSASSIN_Act3_LightningMercLvl25.d2s  TESTDRUID_Q6_DuranceOfHateEntry.d2s  TESTDRUID_Q6_DurielKilledTyraelTalk.d2s  TESTDRUID_Q6_JerhynMeshifTalked.d2s  TESTDRUID_Quest1_AshearaTalked.d2s  TESTDRUID_Quest1_GidbinnObtained.d2s  TESTDRUID_Quest1_OrmusRingObtained.d2s  TESTDRUID_Quest3_BrainCainTalked.d2s  TESTDRUID_Quest3_BrainPreCain.d2s  TESTDRUID_Quest3_EyeCainTalked.d2s  TESTDRUID_Quest3_EyePreCain.d2s  TESTDRUID_Quest3_FlailCainTalked.d2s  TESTDRUID_Quest3_FlailPreCain.d2s  TESTDRUID_Quest3_HeartCainTalked.d2s  TESTDRUID_Quest3_HeartPreCain.d2s  TESTDRUID_Quest3_WillCainOrmusTalked.d2s  TESTDRUID_Quest3_WillCreated.d2s  TESTDRUID_Quest4_AlkorStatBonus.d2s  TESTDRUID_Quest4_TomeObtained.d2s  TESTDRUID_Start_Act3Entry.d2s
tests/fixtures/savegames/gameplay/normal/act4/: TESTASSASSIN_Act5_DualBarb_Baraya.d2s  TESTASSASSIN_Act5_TwoHandedBarb_Guslav.d2s  TESTDRUID_Act4_AutoOrganized.d2s  (+8 more)
tests/fixtures/savegames/negative/: neg_complex_item5_bit7800.d2s  neg_header_bit80.d2s  neg_huffman_bit7312.d2s  neg_item0_bit7250.d2s  neg_item1_bit7350.d2s  neg_item3_bit7500.d2s  neg_item_bit4000.d2s  neg_jm_marker_bit7224.d2s  neg_stats_bit1600.d2s
tests/fixtures/savegames/original/: TESTAMAZON.d2s  amazon_10_scrolls.d2s  amazon_authority_runeword.d2s  amazon_authority_runeword_truth.json  amazon_empty.d2s  amazon_initial.d2s  amazon_lvl2_progression_complex.d2s  amazon_moved_diff_basis.d2s  amazon_moved_manual.d2s  amazon_v105_act2_start.d2s  amazon_v105_andariel_killed_no_talk.d2s  amazon_v105_re_probe_zigzag_all_diff.d2s  tsc_initial.d2i  tsc_real.d2i
tests/fixtures/savegames/re_probes/: amazon_v105_re_probe_wps.d2s
(+17 files in other folders)
