[package]
name = "d2r-core"
version = "0.1.0"
edition = "2024"

[dependencies]
bitstream-io = "4.9.0"
byteorder = { version = "1.5", default-features = false }
hex = { version = "0.4", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

[[bin]]
name = "d2save_verify"
path = "src/bin/verify/d2save_verify.rs"

[[bin]]
name = "d2save_map"
path = "src/bin/verify/d2save_map.rs"

[[bin]]
name = "d2save_diff"
path = "src/bin/verify/d2save_diff.rs"

[[bin]]
name = "d2item_inspect"
path = "src/bin/verify/d2item_inspect.rs"

[[bin]]
name = "d2item_blob_inspect"
path = "src/bin/verify/d2item_blob_inspect.rs"

[[bin]]
name = "d2save_inject"
path = "src/bin/verify/d2save_inject.rs"

[[bin]]
name = "d2item_extract"
path = "src/bin/verify/d2item_extract.rs"

[[bin]]
name = "d2save_item_diff"
path = "src/bin/verify/d2save_item_diff.rs"

[[bin]]
name = "d2save_grid"
path = "src/bin/verify/d2save_grid.rs"

[[bin]]
name = "d2save_hex_tail"
path = "src/bin/verify/d2save_hex_tail.rs"

[[bin]]
name = "d2save_inventory_check"
path = "src/bin/verify/d2save_inventory_check.rs"

[[bin]]
name = "d2save_bit_analyze"
path = "src/bin/verify/d2save_bit_analyze.rs"

[[bin]]
name = "dump_flags"
path = "src/bin/verify/dump_flags.rs"
