[package]
name = "d2r-core"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
bitstream-io = "4.9.0"
byteorder = { version = "1.5", default-features = false }
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
dotenvy = "0.15"
thiserror = "2.0.18"

[[bin]]
name = "d2save_verify"
path = "src/bin/verify/d2save_verify.rs"

[[bin]]
name = "d2save_map"
path = "src/bin/verify/d2save_map.rs"

[[bin]]
name = "d2save_diff"
path = "src/bin/verify/d2save_diff.rs"

[[bin]]
name = "d2item_inspect"
path = "src/bin/verify/d2item_inspect.rs"

[[bin]]
name = "d2item_blob_inspect"
path = "src/bin/verify/d2item_blob_inspect.rs"

[[bin]]
name = "d2save_inject"
path = "src/bin/verify/d2save_inject.rs"

[[bin]]
name = "d2item_extract"
path = "src/bin/verify/d2item_extract.rs"

[[bin]]
name = "d2save_item_diff"
path = "src/bin/verify/d2save_item_diff.rs"

[[bin]]
name = "d2save_grid"
path = "src/bin/verify/d2save_grid.rs"

[[bin]]
name = "d2save_hex_tail"
path = "src/bin/verify/d2save_hex_tail.rs"

[[bin]]
name = "d2save_inventory_check"
path = "src/bin/verify/d2save_inventory_check.rs"

[[bin]]
name = "d2save_bit_analyze"
path = "src/bin/verify/d2save_bit_analyze.rs"

[[bin]]
name = "dump_flags"
path = "src/bin/verify/dump_flags.rs"

[[bin]]
name = "d2save_status_diff"
path = "src/bin/verify/d2save_status_diff.rs"

[[bin]]
name = "d2item_chunk_verify"
path = "src/bin/verify/d2item_chunk_verify.rs"

[[bin]]
name = "d2item_bit_width_probe"
path = "src/bin/verify/d2item_bit_width_probe.rs"

[[bin]]
name = "d2item_bit_scan"
path = "src/bin/verify/bit_scan.rs"

[[bin]]
name = "d2item_bit_peek"
path = "src/bin/verify/bit_peek.rs"

[[bin]]
name = "d2item_brute_len"
path = "src/bin/verify/brute_len.rs"

[[bin]]
name = "d2item_bit_search"
path = "src/bin/verify/scan_terminator.rs"

[[bin]]
name = "d2item_bit_dump"
path = "src/bin/verify/peek_jav.rs"
[[bin]]
name = "d2item_find_sequence"
path = "src/bin/verify/find_sequence.rs"
[[bin]]
name = "d2item_find_v2"
path = "src/bin/verify/find_v2.rs"
[[bin]]
name = "d2item_find_authority"
path = "src/bin/verify/find_authority.rs"
[[bin]]
name = "d2item_find_fixed"
path = "src/bin/verify/find_fixed.rs"
[[bin]]
name = "d2item_find_mana"
path = "src/bin/verify/find_mana.rs"
[[bin]]
name = "d2item_find_310"
path = "src/bin/verify/find_310.rs"
[[bin]]
name = "d2item_find_bits_width"
path = "src/bin/verify/find_bits_width.rs"
[[bin]]
name = "d2item_find_list1"
path = "src/bin/verify/find_list1.rs"
[[bin]]
name = "d2item_bit_coords"
path = "src/bin/verify/find_bits.rs"
